# Tech-Challenge-Churn

./: LICENSE  MODEL_CARD.md  README.md  aa.py  best_mlp.pt  main.py  mlflow.db  pyproject.toml  render.yaml  requirements.txt
artifacts/: churn_pipeline.joblib  churn_pipeline_decision_tree_baseline.joblib  churn_pipeline_dummy_baseline.joblib  churn_pipeline_logistic_regression_baseline.joblib  churn_pipeline_mlp_pytorch.joblib
docs/: Deploy_Architecture.md  MODEL_CARD.md  Monitoring.MD
mlruns/1/models/m-1d4cea4f1775451f99f67ea21533f851/artifacts/: MLmodel
mlruns/1/models/m-6594f5014f29406ea46455efcbd44ff1/artifacts/: MLmodel
mlruns/1/models/m-8ba20ceb914d494c8ddeac024050cd60/artifacts/: MLmodel
mlruns/1/models/m-9829f1bb7d264cb0a782eb29eb76c769/artifacts/: MLmodel
notebook/: etapa1.ipynb  etapa2.ipynb  script.ipynb
src/: config.py
src/api/: app.py  dependencies.py  logging.py  middleware.py  schemas.py
src/api/routes/: health.py  predict.py
src/data/: load.py  pipeline.py  preprocess.py
src/evaluation/: business.py  metrics.py
src/features/: selection.py
src/models/: baseline.py  neural.py  train.py  tree_models.py
src/visualization/: eda.py
tests/: conftest.py
tests/unit/: test_api_smoke.py  test_load.py  test_metrics.py  test_process.py  test_schema.py  test_selection.py  test_smoke.py
